Delete draft schemas and implementation, change review schema and start implementation of delegations, update review table in database
